# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-01-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update the Erlang Binary Term Format for
      Go/Javascript/Perl/PHP/Python/Ruby to encode
      nil/undefined/undef/NULL/None as an undefined Erlang atom

2018-01-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix logging syslog handling to ensure misconfigured syslog
      settings will not cause a crash if the settings are set
      dynamically and add log output with the error information
    * Update syslog_socket

2018-01-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Javascript CloudI API to no longer have a busy-wait
      problem when blocking on poll

2018-01-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix multicast node discovery to not crash on udp errors
      (e.g., enetunreach)
    * Update nodefinder, cpg

2017-12-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add file_size_limit argument to cloudi_service_queue so the
      file will always stay below the file_size_limit value
      (default value is 128MB)
      (if fault_isolation is both, the response size may cause
       the file size to exceed the file_size_limit because the
       response size isn't able to be anticipated accurately
       (if the response size is less than or equal to the request size
        this is never a problem because the space is reused))

2017-12-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix OCaml 4.06 support by relying fully on
      OCaml num as an external dependency
    * Fix Java 9 support by using Add-Opens in the jar manifests
      (with Main-Class entries) to allow file descriptor creation
      from an integer using reflection

2017-12-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Java 9 CloudI API Integer constructor deprecation error
    * Add OCaml num as an external dependency of the OCaml CloudI API